kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencies-app-backend
  labels:
    app: currencies-app-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: currencies-app-backend
  template:
    metadata:
      labels:
        app: currencies-app-backend
    spec:
      containers:
      - name: currencies-app-backend
        image: lehastro/currencies-app-backend
        ports:
        - containerPort: 5000
