kubernetes/service.yaml
---
#apiVersion: v1
#kind: Service
#metadata:
#  creationTimestamp: null
#  labels:
#    app: currencies-app-backend
#  name: currencies-app-backend
#spec:
#  selector:
#    app: currencies-app-backend
#  ports:
#  - port: 80
#    protocol: TCP
#    targetPort: 5000
#  type: ClusterIP
#status:
#  loadBalancer: {}


apiVersion: v1
kind: Service
metadata:
  name: currencies-app-backend
spec:
  ports:
  - port: 80
    name: plaintext
    targetPort: 5000
  selector:
    app: currencies-app-backend
  type: LoadBalancer


---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
spec:
  ports:
  - port: 9000
    name: sonarqube
    targetPort: 9000
  selector:
    app: sonarqube
  type: LoadBalancer
