kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-currencies-app-backend
   # kubernetes.io/ingress.class: "nginx" 
   # ingress.alb.yc.io/external-ipv4-address: auto
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: currencies-app-backend
             port: 
                number: 5000


















#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: ingress-currencies-app-backend
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
#spec:
#  rules:
#  - http:
#      paths:
#      - path: "/web"
#        pathType: Prefix
#        backend:
#          service:
#             name: web
#             port:
#                number: 80
